[gd_scene load_steps=12 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://webrtc.gd" type="Script" id=3]
[ext_resource path="res://CubeBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://BallBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Station.tscn" type="PackedScene" id=6]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="BoxShape" id=2]

[sub_resource type="QuadMesh" id=3]
size = Vector2( 10, 10 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.494118, 0.396078, 0.396078, 1 )

[sub_resource type="ConvexPolygonShape" id=5]
points = PoolVector3Array( -5, -5, 0, -5, 5, 0, 5, 5, 0, -5, -5, 0, 5, 5, 0, 5, -5, 0 )

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="webrtc" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_right = 78.0
margin_bottom = 14.0
text = "MY PEER_ID:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel"]
margin_left = 422.731
margin_top = 180.822
margin_right = 577.731
margin_bottom = 274.822
disabled = true
text = "test rpc"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="Panel"]
margin_left = 86.8549
margin_top = 228.613
margin_right = 384.855
margin_bottom = 388.613

[node name="ItemList" type="ItemList" parent="Panel"]
margin_left = 83.0801
margin_top = 171.862
margin_right = 285.08
margin_bottom = 418.862
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList2" type="ItemList" parent="Panel"]
margin_left = 738.0
margin_top = 134.0
margin_right = 889.0
margin_bottom = 338.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 838.946
margin_top = 25.2498
margin_right = 993.946
margin_bottom = 119.25
text = "leave game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.724268, 0.689518, 0, -0.689518, 0.724268, 0, 2.99235, 3.13909 )
speed = 5.0
enabled = true

[node name="World" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="SpawnPoints" type="Node" parent="World"]

[node name="1" type="Position3D" parent="World/SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0 )

[node name="2" type="Position3D" parent="World/SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )

[node name="Wall" type="Spatial" parent="World"]

[node name="StaticBody" type="StaticBody" parent="World/Wall"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 5, -5, 0.1, 0 )

[node name="MeshInstance" type="MeshInstance" parent="World/Wall/StaticBody"]
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="World/Wall/StaticBody"]
shape = SubResource( 2 )

[node name="StaticBody2" type="StaticBody" parent="World/Wall"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 5, 5, 0.1, 0 )

[node name="MeshInstance" type="MeshInstance" parent="World/Wall/StaticBody2"]
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="World/Wall/StaticBody2"]
shape = SubResource( 2 )

[node name="StaticBody3" type="StaticBody" parent="World/Wall"]
transform = Transform( -1.62921e-08, 0, 5, 0, 0.1, 0, -0.1, 0, -8.14603e-07, 0, 0.1, 5 )

[node name="MeshInstance" type="MeshInstance" parent="World/Wall/StaticBody3"]
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="World/Wall/StaticBody3"]
shape = SubResource( 2 )

[node name="StaticBody4" type="StaticBody" parent="World/Wall"]
transform = Transform( -1.62921e-08, 0, 5, 0, 0.1, 0, -0.1, 0, -8.14603e-07, 0, 0.1, -5 )

[node name="MeshInstance" type="MeshInstance" parent="World/Wall/StaticBody4"]
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="World/Wall/StaticBody4"]
shape = SubResource( 2 )

[node name="Floor" type="StaticBody" parent="World"]

[node name="MeshInstance" type="MeshInstance" parent="World/Floor"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, -0.00778675, 0, 0.000657678 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="World/Floor"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 5 )

[node name="Objects" type="Node" parent="World"]

[node name="CubeBox" parent="World" instance=ExtResource( 4 )]
transform = Transform( 0.1, 0, 6.51683e-08, 0, 0.1, 0, -6.51683e-08, 0, 0.1, 0, 0.1, 0 )

[node name="BallBox" parent="World" instance=ExtResource( 5 )]
transform = Transform( 0.1, 0, 6.51683e-08, 0, 0.1, 0, -6.51683e-08, 0, 0.1, 0, 0.1, -1 )

[node name="Station" parent="World" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 1 )
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
